2005-06-24  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* RELEASE
	0.1.10 release :)
	
2005-06-24  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	0.1.9.2 pre-release !

	* pitivi/project.py:
	* configure.ac:
	* pitivi.spec.in:
	Bumped required gnome-python version to 2.10.0
	Now using gnomevfs instead of gnome.vfs

	* pitivi/ui/Makefile.am: (ui_PYTHON): 
	typo

2005-06-23  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/Makefile.am:
	* pitivi/Makefile.am:
	Added new files to be installed

	* pitivi/ui/viewer.py: (EncodingDialog): 
	* pitivi/ui/encodingdialog.glade:
	Added settings in Encoding Dialog

	* pitivi/ui/viewer.py:
	Added audioconvert in the Audio Sink Thread

	* pitivi/ui/projectsettings.py:
	* pitivi/ui/projectsettings.glade:
	* pitivi/ui/gstwidget.py:
	* pitivi/ui/elementsettingsdialog.glade:
	* pitivi/ui/exportsettingswidget.py:
	* pitivi/ui/exportsettingswidget.glade:
	Split up Settings Dialogs in smaller widgets

	* pitivi/ui/glade.py:
	Wrapper for the run() dialog method

	* pitivi/bin.py:
	SmartBin are no longer gst.Thread but gst.Bin
	Added support for element properties in timeline encoding thread

	* pitivi/objectfactory.py: (FileSourceFactory):
	Added support for 'pixel-aspect-ratio'

	* pitivi/playground.py:
	Removed useless state_change()

	* pitivi/project.py:
	* pitivi/settings.py:
	Moved ProjectSettings to a more generic ExportSettings

	* pitivi/debug.py:
	Debugging functions

2005-06-08  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/discoverer.py: (Discoverer): 
	Added 'ready' signal for end of discovery

2005-06-05  Jono Bacon <jonobacon@gmail.com>

	Reviewed by : Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/mainwindow.py: (PitiviMainWindow.__init__): 
	Maximize main window at startup

2005-06-03  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/ui/projectsettings.glade: 
	Translation

2005-06-03  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/objectfactory.py: (FileSourceFactory.make_video_adapter_bin): 